--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,16 @@
 $primary-color: #9356DC; 
 $second-color: #FF79DA;
 $tertiaire-color: #99E2D0;
+$footer-color-font:white;
+$back-ground-color-footer:black;
 
 .wrapper {
-    margin: 0 50px;
+    margin: 0 5px;
+}
+
+.first-title {
+    display: flex;
+    flex-direction: column;
 }
 
 .logo-oh-my-food {
@@ -22,7 +29,19 @@ text-align: center;
     text-align: center;
 }
 
-.boutons {
+.button-submit {
+display: flex;
+justify-content: center;
+}
+
+.explorer-button {
+    width: 170px;
+    height: 30px;
+    border-radius: 15px;
+
+}
+
+.explorer-titre {
     display: flex;
     flex-direction: column;
 }
@@ -32,3 +51,33 @@ text-align: center;
     flex-direction: column;
 }
 
+.boutons {
+    display: flex;
+    flex-direction: column;
+}
+
+.images {
+    height: 140px;
+    width: 100%;
+}
+
+.proposer-un-resto {
+    display: flex;
+    align-items: center;
+}
+
+
+//...............................................footer
+
+.fa-cutlery:before, .fa-handshake-o:before,.logo-footer, .p-footer, .contact-footer {
+    color: $footer-color-font;
+}
+
+.partenaire {
+    display: flex;
+    align-items: center;
+}
+
+.logo-footer {
+    height: 15px;
+}
