--- a/sass/style.css
+++ b/sass/style.css
@@ -1,18 +1,110 @@
-.wrapper {
-  margin: 0 5px;
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+body {
+  margin: 0;
+}
+
+h1, h4 {
+  font-family: 'Roboto', sans-serif;
+  color: black;
+}
+
+p {
+  margin: 5px 0;
+  font-family: 'Roboto', sans-serif;
+  color: black;
+}
+
+.fa-heart, .fa-heart {
+  color: black;
+}
+
+.wrapper-1 {
+  padding: 15px;
+  background-color: #383838;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: auto;
+}
+
+form {
+  margin-left: 50px;
 }
 
 .first-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.first-title--page1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
 }
 
 .logo-oh-my-food {
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 45px;
+  font-family: Shrikhand;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 33%;
+}
+
+.logo-oh-my-food-index {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 45px;
+  font-family: Shrikhand;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo-fleche {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 33%;
 }
 
 .logo {
-  height: 15px;
+  height: 20px;
 }
 
 #search {
@@ -20,56 +112,564 @@
 }
 
 .location {
-  text-align: center;
-}
-
-.button-submit {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #dedede;
+  height: 45px;
 }
 
-.explorer-button {
-  width: 170px;
-  height: 30px;
-  border-radius: 15px;
+#search {
+  background-color: #dedede;
 }
 
 .explorer-titre {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
+  padding: 0 20px;
 }
 
-.boutons {
+.explorer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+  height: 250px;
+  padding: 15px;
+  background-color: #f7f7f7;
 }
 
-.boutons {
+.button-submit {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 15px 0;
+}
+
+.explorer-button {
+  width: 220px;
+  height: 45px;
+  border-radius: 25px;
+  background: linear-gradient(346deg, #8406e0 8%, #ff07f3 87%);
+  color: white;
+  border: transparent;
+}
+
+.explorer-button--page-1 {
+  width: 150px;
+  height: 40px;
+  border-radius: 25px;
+  background: linear-gradient(346deg, #8406e0 8%, #ff07f3 87%);
+  color: white;
+  border: transparent;
+  cursor: pointer;
+}
+
+.fa-store {
+  color: #A333FF;
+}
+
+.titre-page1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.titre-fonctionnement {
+  text-align: start;
+}
+
+.fonctionnement {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 15px;
+}
+
+.trois-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 20px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 180px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 1px 2px 2px 1px lightgrey;
+          box-shadow: 1px 2px 2px 1px lightgrey;
+  border-radius: 15px;
+  position: relative;
+  background-color: #efefef;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.6rem 0;
+  width: 250px;
+}
+
+.div--pink {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 1px 2px 2px 1px lightgrey;
+          box-shadow: 1px 2px 2px 1px lightgrey;
+  border-radius: 15px;
+  position: relative;
+  background-color: #efefef;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.6rem 0;
+  background-color: #ECE3F3;
+  width: 250px;
+}
+
+.logo-fonctionnement {
+  margin-right: 20px;
+}
+
+.number {
+  position: absolute;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  padding: 2px;
+  background: #fff;
+  border: 2px solid transparent;
+  color: white;
+  background-color: #9356DC;
+  text-align: center;
+  left: -15px;
+}
+
+.position-heart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+}
+
+.section2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #efefef;
+  padding: 15px 15px 45px 15px;
+}
+
+.double-lien-carte1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.double-lien-carte2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .images {
-  height: 140px;
+  height: 173px;
   width: 100%;
+  border-radius: 15px 15px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.proposer-un-resto {
+.lien-carte {
+  text-decoration: none;
+  position: relative;
+}
+
+.cartes-resto {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 15px;
+}
+
+.block-nouveau {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #98F4C7;
+}
+
+.p-nouveau {
+  color: #17862B;
+  width: 75px;
+  text-align: center;
+}
+
+.position-heart {
+  position: relative;
+}
+
+.heart1 {
+  opacity: 1;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+  position: absolute;
+  right: 10px;
+}
+
+.heart2 {
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.position-heart:hover .heart1 {
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.position-heart:hover .heart2 {
+  opacity: 1;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.description-carte {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: auto;
+  background: white;
+  margin-top: -4px;
+  border-radius: 0 0 15px 15px;
 }
 
-.fa-cutlery:before, .fa-handshake-o:before, .logo-footer, .p-footer, .contact-footer {
+.description-carte--page1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: auto;
+  background: white;
+  border-radius: 15px;
+}
+
+.titre-carte, .localisation-resto, .titre-carte--page1, .descriptif-plat--page1, .p-prix--page1 {
+  margin: 5px;
+}
+
+.La-Palette, .La-note, .A-la-francaise, .Le-délice, .carte-resto--page1 {
+  padding: 5px 10px;
+}
+
+.prix--page1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 5px 10px;
+}
+
+.main--page1 {
+  background-color: #f7f7f7;
+  padding: 15px 15px 30px 15px;
+  border-radius: 30px 30px 0px 0px;
+  margin: -20px 0 0 0;
+}
+
+.entree--page1, .plat--page1, .dessert--page1 {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 15px;
+  margin-top: 15px;
+}
+
+.titre-carte--page1, .p-prix--page1 {
+  font-size: 14px;
+}
+
+.descriptif-plat--page1 {
+  font-size: 12px;
+}
+
+.titre-page1-A-la-francaise {
+  font-size: 15px;
+}
+
+.titre-entree--page1, .titre-plats--page1, .titre-dessert--page1 {
+  font-size: 10px;
+  border-bottom: 2px solid #A6F6CD;
+  width: 31px;
+}
+
+.underline-page1 {
+  margin: 11px 0px 6px 2px;
+}
+
+.titre-carte--page1 {
+  font-weight: bold;
+}
+
+.image-background-A-la-francaise {
+  background-image: url(../images/restaurants/A-la-francaise.jpg);
+  background-size: cover;
+  height: 210px;
+  width: 100%;
+  background-position: center center;
+}
+
+.image-background-la-palette {
+  background-image: url(../images/restaurants/La-plalette.jpg);
+  background-size: cover;
+  height: 210px;
+  width: 100%;
+  background-position: center center;
+}
+
+.image-background-Le-delice {
+  background-image: url(../images/restaurants/Le-délice.jpg);
+  background-size: cover;
+  height: 210px;
+  width: 100%;
+  background-position: center center;
+}
+
+.image-background-la-note-enchantee {
+  background-image: url(../images/restaurants/La-note.jpg);
+  background-size: cover;
+  height: 210px;
+  width: 100%;
+  background-position: center center;
+}
+
+.fa-utensils, .fa-handshake-o:before, .p-footer {
   color: white;
 }
 
-.partenaire {
+.contact-footer {
+  font-family: Roboto;
+  color: white;
+}
+
+.partenaire, .proposer-un-resto {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .logo-footer {
   height: 15px;
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+  margin-bottom: 10px;
+  font-family: 'Shrikhand';
 }
 
+.p-footer {
+  padding-left: 10px;
+}
+
+.contact-footer {
+  text-decoration: none;
+}
+
+.p2-footer {
+  color: white;
+}
+
+.p-footer-1 {
+  color: white;
+}
+
+@media only screen and (min-width: 333px) {
+  .titre-fonctionnement {
+    text-align: center;
+  }
+  .section2 {
+    padding: 30px;
+  }
+  .explorer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 436px) {
+  .wrapper-1 {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .section2 {
+    padding: 45px;
+  }
+  .lien-carte {
+    width: 300px;
+  }
+  .cartes-resto {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .titre-restaurants {
+    text-align: center;
+  }
+  .marge--page1 {
+    margin: 0 45px 0 45px;
+  }
+}
+
+@media only screen and (min-width: 520px) {
+  .marge--page1 {
+    margin: 0 70px 0 70px;
+  }
+}
+
+@media only screen and (min-width: 710px) {
+  .first-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .fonctionnement {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 15px;
+    width: 50%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .titre.fonctionnement {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 78px;
+  }
+  .explorer {
+    height: 288px;
+    width: 50%;
+  }
+  .cartes-resto {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .marge--page1 {
+    margin: 0 120px 0 120px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
