--- a/sass/style.css
+++ b/sass/style.css
@@ -82,6 +82,7 @@ p {
 
 .fa-check-circle {
   color: white;
+  animation: rotate 1s ease-in;
 }
 
 .wrapper-1 {
@@ -295,7 +296,7 @@ form {
   justify-content: center;
   background-color: #99E2D0;
   border-radius: 0 15px 15px 0;
-  animation: width 1s ease-in;
+  animation: width 1s linear;
   /* transform: display 5s linear; */
 }
 @keyframes width {
@@ -325,6 +326,16 @@ form {
   }
   100% {
     width: 50px;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  
+  100% {
+    transform: rotate(360deg);
   }
 }
 
