--- a/sass/style.css
+++ b/sass/style.css
@@ -5,7 +5,11 @@ body {
   margin: 0;
 }
 
-h1, h4 {
+h1 {
+  font-family: 'Shrikhand', cursive;
+}
+
+h4, h2 {
   font-family: "Roboto", sans-serif;
   color: black;
 }
@@ -76,7 +80,14 @@ p {
   }
 }
 
-.fa-heart, .fa-heart, .fa-arrow-left {
+.fa-heart, .fa-heart, {
+  background: -webkit-linear-gradient(#cf11a2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.fa-arrow-left {
   color: black;
 }
 
@@ -282,8 +293,7 @@ form {
 .div-au-survol {
   display: none;
   width: 0px;
-  /* position: relative;
-  right: -30px; */
+  
 }
 
 .description-carte--page1:hover .div-au-survol {
@@ -296,7 +306,7 @@ form {
   justify-content: center;
   background-color: #99E2D0;
   border-radius: 0 15px 15px 0;
-  animation: width 1s linear;
+  animation: width 1s ease-in-out;
   /* transform: display 5s linear; */
 }
 @keyframes width {
@@ -327,7 +337,8 @@ form {
   100% {
     width: 50px;
   }
-}
+  }
+
 
 @keyframes rotate {
   0% {
@@ -429,6 +440,7 @@ form {
   height: 55px;
   background: white;
   border-radius: 15px;
+
 }
 
 .titre-carte, .localisation-resto, .titre-carte--page1, .descriptif-plat--page1, .p-prix--page1 {
@@ -463,7 +475,7 @@ form {
 }
 
 .titre-carte--page1, .p-prix--page1 {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .descriptif-plat--page1 {
