--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@ $footer-color-font:white;
 $back-ground-color-footer: 	rgb(56,56,56);
 $background-color-bouton:linear-gradient(346deg, rgba(132,6,224,1) 8%, rgba(255,7,243,1) 87%);
 
+
 body {
     margin: 0;
 }
@@ -40,7 +41,7 @@ p {
   }
 
 .fa-heart, .fa-heart, .fa-arrow-left {
-    color: black;
+    color: black !important;
 }
 .fa-check-circle {
     color:white;
