--- a/sass/style.css
+++ b/sass/style.css
@@ -515,7 +515,7 @@ form {
 }
 
 .image-background-Le-delice {
-  background-image: url(../images/restaurants/Le-délice.jpg);
+  background-image: url(../images/restaurants/Le-delice.jpg);
   background-size: cover;
   height: 210px;
   width: 100%;
