--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,12 @@ body {
     margin: 0;
 }
 
-h1, h4 {
+h1 {
+    font-family: "Shrikhand", sans-serif;
+    color: black;
+  }
+
+h2, h4 {
     font-family: 'Roboto', sans-serif;
     color:black;
 }
@@ -26,29 +31,81 @@ p {
 }
 
 .loader {
+    visibility: hidden;
+    position: fixed;
+    right: 0;
+    left:0;
+    top: 30%;
     margin: auto;
     border: 20px solid #EAF0F6;
     border-radius: 50%;
     border-top: 20px solid #FF7A59;
+    border-left: 20px solid blue;
+    border-right: 20px solid blueviolet;
+    border-bottom: 20px solid yellow;
     width: 200px;
     height: 200px;
-    animation: spinner 0s linear 3s;
+    animation: spinner 3s linear;
   }
   
   @keyframes spinner {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+      transform: rotate(0deg);
+      visibility: visible;
+      opacity: 1;
+    }
+    100% {
+      transform: rotate(360deg);
+      visibility: hidden;
+      opacity: 0;
+    }
+  }
+  
+  .plat--page1 {
+    animation: appear 1s linear;
+  }
+  
+  .wrapper, .dessert--page1 {
+    animation: appear 3s linear;
+  }
+  
+  @keyframes appear {
+    0% {
+      opacity: 0;
+    }
+    20% {
+      opacity: 0;
+    }
+    40% {
+      opacity: 0;
+    }
+    60% {
+      opacity: 0;
+    }
+    80% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 
-.fa-heart {
-    background: -webkit-linear-gradient(#cf11a2);
+.far, .fas {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(255, 0, 242)), to(rgb(86, 71, 173)));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent; 
   }
 
-.fa-arrow-left {
-    color: black !important;
+.fa-utensils {
+    color: white !important;
 }
+
 .fa-check-circle {
     color:white;
+}
+
+.fa-arrow-left {
+    color: black;
 }
 
 .wrapper-1 {
@@ -151,7 +208,7 @@ display: flex;
 .button-submit {
 display: flex;
 justify-content: center;
-margin: 15px 0;
+margin: 35px 0;
 }
 
 .explorer-button {
@@ -161,6 +218,7 @@ margin: 15px 0;
     background: $background-color-bouton;
     color: white;
     border: transparent;
+    box-shadow: 2px 3px 5px #383838;
 
     &--page-1 {
      width: 150px;
@@ -170,20 +228,22 @@ margin: 15px 0;
     color: white;
     border: transparent;
     cursor:pointer;
+    box-shadow: 2px 3px 5px #383838;
     }
         }
 
 .explorer-button:hover {
-    filter: brightness(200%) drop-shadow(30px 3px 4px black);
+    filter: brightness(124%);
+    box-shadow: 6px 6px 6px #383838;
+    transition-duration: 0.5s;
 } 
 
 .explorer-button--page-1:hover {
-    filter: brightness(200%) drop-shadow(30px 3px 4px black);
+    filter: brightness(124%); 
+    box-shadow: 6px 6px 6px #383838;
+    transition-duration: 0.5s;
 }
         
-.fa-store {
-    color: #A333FF;
-}
 
 //...............................................main-1
 
@@ -266,26 +326,84 @@ margin: 15px 0;
 }
 
 .div-au-survol {
-   display: none;
-   width: 0px;
-   position: relative;
-   right: -30px;
-}
-
-.description-carte--page1:hover .div-au-survol {
+    display: none;
+    width: 0px;
+    
+  }
+  .description-carte--page1:hover .div-au-survol {
     display: block;
     padding: 5px 10px;
     display: flex;
     align-items: center;
     height: auto;
-    width: 30px;
+    width: 50px;
     justify-content: center;
-    background-color: $tertiaire-color;
+    background-color: #99E2D0;
     border-radius: 0 15px 15px 0;
-    transform: display 5s linear;
-}
+    animation: width 1s ease-in-out;
+    /* transform: display 5s linear; */
+  }
+  @keyframes width {
+    0% {
+      width: 0px;
+    }
+    15% {
+      width: 8px;
+    }
+    25% {
+      width: 15px;
+    }
+    35% {
+      width: 25px;
+    }
+    50% {
+      width: 30px;
+    }
+    60% {
+      width: 35px;
+    }
+    80% {
+      width: 40px;
+    }
+    90% {
+      width: 45px;
+    }
+    100% {
+      width: 50px;
+    }
+    }
+
+.fa-check-circle {
+        color: white;
+        animation: rotate 1s ease-in;
+      }
+  
+  
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
 
 //...............................................main-2
+
+
+.div-globale-des-menus {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+}
+
+.div-entrées {
+    display: flex;
+    flex-direction: column;
+}
 
 .section2 {
     display: flex;
@@ -302,6 +420,11 @@ margin: 15px 0;
 .double-lien-carte2 {
     display: flex;
     flex-direction: column;
+}
+
+.carte-par-carte {
+    position: relative;
+    width: 294px;
 }
 
 .images {
@@ -323,7 +446,7 @@ margin: 15px 0;
 
 .block-nouveau {
     position: absolute;
-    top: 10px;
+    top: -136px;
     right: 10px;
     background-color: #98F4C7;
 }
@@ -425,7 +548,6 @@ margin: 15px 0;
 }
 
 .titre-entree--page1, .titre-plats--page1, .titre-dessert--page1 {
-
 font-size: 10px;
 border-bottom: 2px solid #A6F6CD;
 width: 31px;
@@ -456,12 +578,11 @@ width: 31px;
 }
 
 .image-background-Le-delice {
-    background-image: url(../images/restaurants/Le-délice.jpg);
+    background-image: url(../images/restaurants/Le-delice.jpg);
     background-size: cover;
     height: 210px;
     width: 100%;
     background-position: center center;
-
 }
 
 .image-background-la-note-enchantee {
@@ -480,7 +601,15 @@ width: 31px;
 
 
 .fa-utensils, .fa-handshake-o:before, .p-footer  {
-    color: $footer-color-font;
+    color: white;
+}
+
+.fa-list, .fa-mobile {
+    color: black
+}
+
+.fa-store {
+    color: $primary-color;
 }
 
 .contact-footer {
@@ -536,6 +665,21 @@ width: 31px;
 
 }
 
+
+@media only screen and (max-width: 425px) {
+    .description-carte--page1:hover .carte-resto--page1 .descriptif-plat--page1, 
+    .description-carte--page1:hover .carte-resto--page1 .titre-carte--page1 {
+      max-width: 140px;
+    }
+    
+    .descriptif-plat--page1, .titre-carte--page1 {
+      max-width: 230px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  }
+
 @media only screen and (min-width: 436px) {
 
     .wrapper-1 {
@@ -573,6 +717,7 @@ width: 31px;
     }
 
 }
+
 
 @media only screen and (min-width: 710px) {
 
@@ -613,7 +758,32 @@ padding-top: 78px;
     padding: 15px 80px 30px 80px;
 }
 
+}
 
+@media only screen and (min-width: 1250px) {
+    .div-globale-des-menus {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .div-entrées {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .description-carte--page1:hover .carte-resto--page1 .descriptif-plat--page1, 
+    .description-carte--page1:hover .carte-resto--page1 .titre-carte--page1 {
+      max-width: 140px;
+    }
+    
+    .descriptif-plat--page1, .titre-carte--page1 {
+      max-width: 230px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
 
 }
 
