--- a/sass/style.css
+++ b/sass/style.css
@@ -80,9 +80,10 @@ p {
   }
 }
 .far, .fas {
-  background: -webkit-gradient(linear, left top, left bottom, from(#ff00f2), to(#5647ad));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background: -webkit-linear-gradient(
+346deg, rgba(132,6,224,1) 8%, rgba(255,7,243,1) 87%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .fa-utensils {
